# OfflineSiem

./: 247140043279_CloudTrail_ap-southeast-1_20251216T1105Z_o84V0PyitsPUKeg5.json  247140043279_CloudTrail_ap-southeast-1_20251216T1110Z_ABZx9bSh0XlNXBSS.json  CHANGELOG.md  CONFIGURATION_GUIDE.md  DEBUG_GUIDE.md  FIX_PARAMETER_NAMING.md  IMPORT_MULTIPLE_RULES.md  README.md  RULE_FORMAT_GUIDE.md  TROUBLESHOOTING_IMPORT_ERROR.md  VSCODE_DEBUG_SETUP.md  generate_rules_from_excel.py  index.html  package-lock.json  package.json  rule_analysis.txt  start-dev.ps1
rules/: Khách - Release - Threat model cho Kiến trúc Oncloud HDBank - Threat case final.xlsx  tm-010_tm-011_tm-012_uc-05.yaml  tm-010_tm-011_tm-012_uc-06.yaml  tm-010_tm-011_tm-013_uc-061.yaml  tm-010_uc-01.yaml  tm-010_uc-02.yaml  tm-010_uc-04.yaml  tm-010_uc-07.yaml  tm-010_uc-09.yaml  tm-010_uc-11.yaml  tm-018_uc-01.yaml  tm-018_uc-02.yaml  tm-029_uc-2903.yaml  tm-039_uc-3902.yaml  tm-039_uc-3905.yaml  tm-039_uc-3906.yaml  tm-039_uc-3907.yaml  tm-039_uc-3908.yaml  tm-039_uc-3910.yaml  tm-039_uc-3911.yaml  tm-039_uc-3913.yaml  tm-039_uc-3914.yaml  tm-039_uc-3917.yaml  tm003_uc04.yaml  tm004_uc01.yaml  tm004_uc02.yaml  tm04_uc03log.json
sample_rules/: README.md  aws_brute_force.yaml  aws_console_login.yaml  iam_policy_change.yaml  root_account_usage.yaml  s3_bucket_deletion.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db_engine.rs  lib.rs  log_manager.rs  main.rs  models.rs  rule_manager.rs  test_rule.rs
(+46 files in other folders)
